fix orderlist href

--- a/template/order_list.html
+++ b/template/order_list.html
@@ -35,8 +35,8 @@
                                 <p class="textmenu1">Chậu Cây</p>
                             </a></li>
                         <ul>
-                            <li><a href="#"><p class="textmenu2">Chậu cây sẵn</p></a></li>
-                            <li><a href="#"><p class="textmenu2">Trang trí chậu cây</p></a></li>
+                            <li><a href="pot"><p class="textmenu2">Chậu cây sẵn</p></a></li>
+                            <li><a href="customize"><p class="textmenu2">Trang trí chậu cây</p></a></li>
                             <!-- <li><a href="gompot">
                                     <p class="textmenu2">Chậu gốm</p>
                                 </a></li>
