fix href and nav

--- a/template/order_list.html
+++ b/template/order_list.html
@@ -36,7 +36,7 @@
                             </a></li>
                         <ul>
                             <li><a href="pot"><p class="textmenu2">Chậu cây sẵn</p></a></li>
-                            <li><a href="customize"><p class="textmenu2">Trang trí chậu cây</p></a></li>
+                            <li><a href="customize"><p class="textmenu2">In chậu theo yêu cầu</p></a></li>
                             <!-- <li><a href="gompot">
                                     <p class="textmenu2">Chậu gốm</p>
                                 </a></li> 
