--- a/template/account.html
+++ b/template/account.html
@@ -32,7 +32,7 @@
                     <tr>
                         <th>{{ order.id }}</th>
                         <th>{{ order.time }}</th>
-                        <th>{{ order.total_price }}</th>
+                        <th>{{ order.total_price }}000 VNĐ</th>
                         <th>{{ order.status }}</th>
                     </tr>
                     {% endfor %}
