--- a/template/aboutus.html
+++ b/template/aboutus.html
@@ -4,15 +4,15 @@
 <link href="{% static 'blog.css' %}" rel='stylesheet'>
 
 <body>
-        <div id="top-banner-1" class="relative banner">
+        <div style = "width:100%;"id="top-banner-1" class="relative banner">
                 <div class="banner-inner-wrapper">
-                    <img id="banner-image" src="{% static 'aboutus.png' %}" alt="Banner Image">
+                    <img style = "width:100%; height:auto;object-fit:contain;"id="banner-image" src="{% static 'aboutus.png' %}" alt="Banner Image">
                 </div>
             </div>
         <!-- <div style ="width:80%;margin-left:50%;transform:translateX(-50%)"><img class = "blogimg" src="{% static 'aboutus.png' %}"></div> -->
-<div class="gridcontainerblog" style="width:90%;display:grid;grid-template-columns:5fr 5fr;">
+<div class="gridcontainerblog" >
         <div class ="blcontainer">
-                <h3 style="font-weight: bold;" class="blogh1">Bắt nguồn từ ý tưởng “nông trại trong nhà”, INDOFA ra đời với sứ mệnh mang đến cho khách hàng trải nghiệm trồng và chăm sóc cây với các sản phẩm hạt giống đa dạng, dụng cụ trồng cây tiện lợi và dịch vụ tự thiết kế chậu cây độc đáo.</p></div>
+                <h3 style="font-weight: bold;" class ="blogh1">Bắt nguồn từ ý tưởng “nông trại trong nhà”, INDOFA ra đời với sứ mệnh mang đến cho khách hàng trải nghiệm trồng và chăm sóc cây với các sản phẩm hạt giống đa dạng, dụng cụ trồng cây tiện lợi và dịch vụ tự thiết kế chậu cây độc đáo.</p></div>
         <div>
     
                 <p class="blogtext1">Chạy theo cuộc sống bận rộn và hối hả, nhiều người cảm thấy căng thẳng, áp lực và thiếu thời gian để thư giãn. Ai ai cũng đắm chìm trong học tập và công việc mà ít để ý rằng những thứ đơn giản xung quanh chúng ta đẹp đến mức nào và họ cũng quên đi rằng bản thân mình cần sự thư giãn từ các trải nghiệm thú vị với mọi thứ ở xung quanh chúng ta. Có thể nhiều người sẽ lựa chọn các buổi du lịch dã ngoại cùng bạn bè ngoài thiên nhiên để tận hưởng, hoặc cũng có người sẽ sử dụng thời gian rảnh của mình để nâng niu và yêu thích những thứ mà mình đã chăm sóc trong thời gian dài như nuôi thú cưng hay trồng hoa và cây. Tuy nhiên, phần lớn mọi người đều tất bật với công việc, vì thế việc trồng và chăm sóc các loại cây cảnh nhỏ gọn là giải pháp tối ưu nhất cho những người bị giới hạn về thời gian và tài chính … </p>
