--- a/template/base.html
+++ b/template/base.html
@@ -117,8 +117,9 @@
         <p class ="lastboldtext">INDOFA - INDOOR FARM </p>
         <div class = "footertextcontainer"><img class = "footerimg" src="{% static 'location.png' %}"><p class="lasttext">Địa chỉ: 669 QL1A, khu phố 3, Thành phố Thủ Đức, TPHCM</p></div>
         <div class = "footertextcontainer"><img class = "footerimg" src="{% static 'mail1.png' %}"><p class="lasttext">Email: indofa1804@gmail.com</p></div>
-        <div class="footer-content"><div class = "footertextcontainer"><img class = "footerimg" src="{% static 'phone-call1.png' %}"><p class="lasttext" style="margin-left: 30px;">SĐT: 0582696460</p></div>
-        <div class = "footer-right">
+        <div class = "footertextcontainer"><img class = "footerimg" src="{% static 'phone-call1.png' %}"><p class="lasttext">SĐT: 0582696460</p></div>
+        <div class="footer-content">
+        <div class = "footer-right" style ="width: 100%;">
             <div class="text-contact"><p >Kết nối với chúng tôi</p></div>
             
             <div><a href="https://www.facebook.com/profile.php?id=100092286823167"><svg xmlns="http://www.w3.org/2000/svg" width="35" height="35" fill="currentColor" class="bi bi-facebook" viewBox="0 0 16 16">
