--- a/template/base.html
+++ b/template/base.html
@@ -94,7 +94,7 @@
         <div class="footercontainer">
             <div class='text'>
                 <p class="bold">Sản phẩm</p>
-                <p><a href="{% url 'home' %}order/plant">Hạt giống</a> <br><a href="{% url 'home' %}order/other">Dụng cụ trồng cây</a><br><a href="{% url 'home' %}order/customize">In chậu theo yêu cầu</a><br>Trang trí chậu cây<br>Chậu cây sẵn<br><a href="{% url 'home' %}order/soil"> Đất / giá
+                <p><a href="{% url 'home' %}order/plant">Hạt giống</a> <br><a href="{% url 'home' %}order/other">Dụng cụ trồng cây</a><br><a href="{% url 'home' %}order/customize">In chậu theo yêu cầu</a><br><a href="{% url 'home' %}order/decor"></a>Trang trí chậu cây<br><a href="{% url 'home' %}order/pot">Chậu cây sẵn</a><br><a href="{% url 'home' %}order/soil"> Đất / giá
                     thể trồng</a></p>
             </div>
             <div class='text'>
