--- a/template/base.html
+++ b/template/base.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Indofa</title>
     {% load static %}
+    <link rel="icon" type="image/x-icon" href="{% static 'headerlogo.png' %}">
     <link href="{% static 'main.css' %}" rel='stylesheet'>
     <script language="JavaScript" type="text/javascript" src="{% static 'main.js' %}"></script> 
     <script language="JavaScript" type="text/javascript" src="{% static 'menunav.js' %}"></script> 
