--- a/template/register.html
+++ b/template/register.html
@@ -5,6 +5,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         {% load static %}
+        <link rel="icon" type="image/x-icon" href="{% static 'headerlogo.png' %}">
         <link href="{% static 'register.css' %}" rel='stylesheet'>
     </head>
     <body>
