--- a/template/base.html
+++ b/template/base.html
@@ -19,8 +19,8 @@
             <li><a class="cate" href="{% url 'home' %}order/plant">HẠT GIỐNG</a>
             <ul class="catelvone">
                 <li><img src="{% static 'vegetable.png' %}"><a  href="{% url 'home' %}order/cuqua">Hạt giống củ quả</a></li>
-                <li><img src="{% static 'flower.png' %}"><a href="{% url 'home' %}order/veg">Hạt giống hoa</a></li>
-                <li><img src="{% static 'plant.png' %}"><a href="{% url 'home' %}order/plant">Hạt giống rau</a></li>    
+                <li><img src="{% static 'flower.png' %}"><a href="{% url 'home' %}order/flower">Hạt giống hoa</a></li>
+                <li><img src="{% static 'plant.png' %}"><a href="{% url 'home' %}order/veg">Hạt giống rau</a></li>    
             </ul></li>
             <li><a class="cate" href="{% url 'home' %}order/pot">DỤNG CỤ TRỒNG CÂY</a>
             <ul class="catelvone">
